fixed width of nav dropdown on mobile

--- a/navbar.css
+++ b/navbar.css
@@ -23,14 +23,13 @@
     .dropdown-menu .multi-level .show {
         padding: 5px !important;
     }
-    .dropdown-submenu {
-        width: 100% !important;
+    .nav-item {
+        max-width: 95vw !important;
     }
     .dropdown-item {
         white-space: nowrap !important;
         overflow: hidden !important;
         text-overflow: ellipsis !important;
-        width: 50% !important;
     }
 }
 body {
